--- a/src/css/3_navigation.css
+++ b/src/css/3_navigation.css
@@ -16,7 +16,6 @@ header {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.0);
   transition: all 0.5s ease;
   z-index: 100;
-
 }
 
 header:after, header:before {
@@ -71,8 +70,8 @@ header:after, header:before {
     width: var(--lg-width);
   }
 
-  .logo {
-    margin-left: 4px;
+ /* .logo {
+    margin-left: 4px;*/
   }
 }
 
@@ -120,7 +119,6 @@ header.overlay-close {
 
 .overlay-open ul li {
   opacity: 0;
-
 }
 
 .overlay-open li {
